2008-11-30  Sebastien Pouliot  <sebastien@ximian.com>

	* AttributeStringLiteralsShouldParseCorrectlyRule.cs: Use 
	Has{x} methods to avoid creating empty collections in Cecil. Remove 
	the checks leading to DoesNotApply since they were too complex to
	improve readability (with added Has{x} calls) and did not help 
	performance.
	* AvoidConstructorsInStaticTypesRule.cs: Use HasConstructors, 
	HasMethods and HasFields.
	* CheckParametersNullityInVisibleMethodsRule.cs: Use HasParameters
	* DisposableFieldsShouldBeDisposedRule.cs: Use HasFields to skip
	the second half of the rule.
	
2008-11-18  Sebastien Pouliot  <sebastien@ximian.com>

	* BadRecursiveInvocationRule.cs: Avoid calling Body.Instructions 
	property chain so many times (24% of the calls to get_Body came
	from here).

2008-11-13  Jesse Jones  <jesjones@mindspring.com>

	* NullDerefAnalysis.cs: Added a comment describing one way we can fix
	the latest problem with the rule.

2008-11-13  Sebastien Pouliot  <sebastien@ximian.com>

	* dataflow/CFG.cs: Extract helper class MethodPrinter. Patch by
	Jesse Jones

2008-11-09  Jesse Jones  <jesjones@mindspring.com>

	* NullDerefAnalysis.cs, dataflow/Dataflow.cs: Write debug output 
	using Trace instead of Console.
	* NullDerefRule.cs: write the dot file only if triply verbose.

2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* Gendarme.Rules.Correctness.mdp:
	* Gendarme.Rules.Correctness.csproj: Activate makefile integration for
	all the rules projects. Remove the old mdp files as they are no
	longer needed.

2008-11-01  Sebastien Pouliot  <sebastien@ximian.com>

	* CheckParametersNullityInVisibleMethodsRule.cs: New. Simple rule
	to look for missing null check on method's parameters. Porbably short
	lived wrt NullDerefRule being worked on actively but still a near-zero
	false positive solution for 2.2.
	* Makefile.am: Add moved rule and test to the build.

2008-10-30  Jesse Jones  <jesjones@mindspring.com>
