@@ -1,3 +1,10 @@
+2008-12-05  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* AttributeStringLiteralsShouldParseCorrectlyRule.cs: Use 
+	HasParameters
+	* CheckParametersNullityInVisibleMethodsRule.cs: Use 
+	HasParameters
+
 2008-11-30  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* AttributeStringLiteralsShouldParseCorrectlyRule.cs: Use 
